Skin Changer 1.0.0 - preview not fixed yet :(